--- a/mail/12/index.html
+++ b/mail/12/index.html
@@ -80,9 +80,9 @@
                             Your Job Advertisement has been renewed                        </div>
                         <br>
                         <div style="font-family: Proxima Nova Reg;">
-                            Hi there, {{company_name}}<br>
+                            Hi, {{company_name}}<br>
 <br>
-
+Thank you for using Jobs.id<br>
 You have sucessfully renewed your job advertisement for 
 {{job_title}}<br>
 <div style="text-align:center">
