--- a/mail/13/index.html
+++ b/mail/13/index.html
@@ -77,7 +77,7 @@
                     <td class="container-padding" bgcolor="#ffffff" style="background-color: #ffffff; padding-left: 30px; padding-right: 30px; font-size: 14px; line-height: 20px; font-family: Helvetica, sans-serif; color: #333;">
                         <br>
                         <div style="font-family: Proxima Nova Semi-bold;font-weight: bold; font-size: 18px; line-height: 24px; color: #333">
-                            Hi You havent active for a while. Check new job post on Jobs.id                        </div>
+                            You havent active for a while.<br>Check new job post on Jobs.id                        </div>
                         <br>
                         <div style="font-family: Proxima Nova Reg;">
                             Hi {{name}},
@@ -86,7 +86,7 @@
 Sending you a greeting, wishing you well! 
 <br>
 <br>
-Please update us your last achievement / 
+Please update your last achievement / 
 career move to make sure 
 you are aware of the most relevant opportunities matched 
 to your accomplishments. 
