--- a/mail/16/index.html
+++ b/mail/16/index.html
@@ -84,9 +84,27 @@
 <br>
 <br>
 
-Your {{job_title}} job opening is now LIVE! 
+Your {{job_title}} job opening is now LIVE! You can see your ads by click the link below.
 <br>
-We look forward to hearing great news re your talent fulfillment!
+<br>
+<a href="http://testing2.jobs.id/en/view_ads" 
+style="
+    text-decoration:none;
+    margin:5px 0;
+    color:#fff;
+    background-color:#428bca;
+    border:1px solid #357ebd;
+    display:inline-block;
+    padding:6px 12px;
+    font-size:14px;
+    font-weight:400;
+    vertical-align:middle;
+    border-radius:4px">
+View Advertisement
+</a>
+<br>
+<br>
+We look forward to hearing great news about your talent fulfillment!
 <br>
 <br>
 
