--- a/mail/19/index.html
+++ b/mail/19/index.html
@@ -80,7 +80,7 @@
                             Reminder: Complete your registration                        </div>
                         <br>
                         <div style="font-family: Proxima Nova Reg;">
-                            Hi <br/>
+                            Hi, {{name}} <br/>
 <br/>
 You visited us couple days ago at <a href='http://testing2.jobs.id/en/'>www.jobs.id</a>.
 <br/>
