--- a/mail/6/index.html
+++ b/mail/6/index.html
@@ -92,8 +92,7 @@ Hello {{candidate_name}},
 <br>
 
 Congratulations, you are a shorlisted candidate at
-<b>{{company_name}}</b> 
-Your application as
+<b>{{company_name}}</b>. Your application as
 <b>{{job_title}}</b> 
 now is being reviewed.
 <br>
